Fix alignment of stories

--- a/client/scss/main.scss
+++ b/client/scss/main.scss
@@ -61,6 +61,7 @@ header {
 
 .story-container {
   display: flex;
+  align-items: center;
 
   .story {
     margin: 0.5rem;
